--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nom-de-votre-projet",
-  "homepage": "https://el-bouhaly.github.io/Tp1-react",
+  "homepage": "https://github.com/el-bouhaly/Tp1_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
