--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "nom-de-votre-projet",
-  "homepage": "https://github.com/el-bouhaly/Tp1_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,15 +9,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
+   
   },
   "eslintConfig": {
     "extends": [
