--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nom-de-votre-projet",
-  "homepage": "https://el-bouhaly.github.io/Tp3-react",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,9 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
